test/syc/bad/memberrect.c
/*
 * '.' requires a struct or union.
 */

int f;

void set_f(void)
{
	f.x = 1;
}
